--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ iCommander-MacOS.xcodeproj/xcuserdata/ilie.xcuserdatad/xcdebugger/Breakpoints_v2
 *.xcuserstate
 
 .DS_Store
+
+iCommander.xcodeproj/xcuserdata/ilie.xcuserdatad/xcdebugger/
