--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ iCommander-MacOS.xcodeproj/xcuserdata/ilie.xcuserdatad/xcdebugger/Breakpoints_v2
 .DS_Store
 
 iCommander.xcodeproj/xcuserdata/ilie.xcuserdatad/xcdebugger/
+
+iCommander.xcodeproj/xcuserdata/
+
+iCommander.xcodeproj/project.xcworkspace/
